I solved all the challenges

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     // 🧠 Example of usage:
     // buildPeter() // should return { firstName: "Peter", lastName: "Pan", age: 12 }
     function buildPeter() {
-
+      return {
+        firstName: "Peter",
+        lastName: "Pan",
+        age: 12
+      }
     }
 
     // 👉 CHALLENGE 2
@@ -31,7 +35,7 @@
     // 🧠 Example of usage:
     // buildUser("John", "Smith", 30) // should return { firstName: "John", lastName: "Smith", age: 30 }
     function buildUser(firstName, lastName, age) {
-
+      return {firstName, lastName, age}
     }
 
     // 👉 CHALLENGE 3
@@ -42,8 +46,12 @@
     // 🧠 Examples of usage:
     // deletePrice({ item: "Tesla Model 3", price: 40000 }) // should return { item: "Tesla Model 3" }
     // deletePrice({ item: "Kobo Libra 2" }) // should return { item: "Kobo Libra 2", priceless: true }
-    function deletePrice() {
-
+    function deletePrice(object) {
+      if (object.hasOwnProperty("price")) {
+        delete object.price
+      } else {
+        object.priceless = true
+      } return object
     }
 
     // 👉 CHALLENGE 4
@@ -53,17 +61,20 @@
     // evenList(['a']) // should return false
     // evenList(['a', 'b']) // should return true
     function evenList(arr) {
-
+      if (arr.length % 2 === 0) {
+        return true
+      } else {return false}
     }
-
     // 👉 CHALLENGE 5
     // 🧠 The function firstOrLast takes an array as the first argument, and a Boolean as the second.
     // 🧠 If the Boolean is true, the function returns the first element of the array, otherwise the last one.
     // 🧠 Examples of usage:
     // firstOrLast(['a', 'b'], true) // should return 'a'
     // firstOrLast(['a', 'b'], false) // should return 'b'
-    function firstOrLast() {
-
+    function firstOrLast(array, boolean) {
+      if (boolean) {
+        return array[0]
+      } else {return array[array.length - 1]}
     }
 
     // 👉 CHALLENGE 6
@@ -72,8 +83,9 @@
     // 🧠 Examples of usage:
     // pushElement([], 1) // should return [1]
     // pushElement(['a', 'b'], 'c') // should return ['a', 'b', 'c']
-    function pushElement() {
-
+    function pushElement(array, value) {
+      array[array.length] = value
+      return array
     }
 
     // 👉 CHALLENGE 7
@@ -88,9 +100,15 @@
     // 🧠 At each iteration of the loop, if the current character is not "x", then add it to the end of the result array.
     // 🧠 You can merge the result array back into a string by using join. Example: ["f", "o", "o"].join("") yields "foo"
     // 🧠 Do not forget to return your rejoined string!
-    function stripX() {
-
+    function stripX(string) {
+      let splitString = string.split('')
+      let combinedString = ''
+      for (let i = 0; i < splitString.length; i++) {
+        if (splitString[i] !== "x") {
+        combinedString += splitString[i] }
+      } return combinedString
     }
+  
 
     // 👉 CHALLENGE 8
     // 🧠 The function stripChar takes a string as its first argument and a character as its second argument.
@@ -101,9 +119,15 @@
     // ❗ Important Notes:
     // 🧠 Try to solve this problem without looking at how you solved the previous one.
     // 🧠 If you need to look, do not copy & paste code. Take a peek and then work from memory!
-    function stripChar() {
-
+    function stripChar(string2, x) {
+      let splitString2 = string2.split('')
+      let combinedString2 = ''
+      for (let i = 0; i < splitString2.length; i++) {
+        if (splitString2[i] !== x) {
+        combinedString2 += splitString2[i] }
+      } return combinedString2
     }
+  
 
     // 👉 CHALLENGE 9
     // 🧠 The function getProps takes an object as its argument.
@@ -114,8 +138,14 @@
     // getProps({ lastName: "Smith", age: 35 }) // should return ["lastName"]
     // getProps({ firstName: "Jane", married: false }) // should return ["firstName"]
     // getProps({ name: "Bamby", favFood: "flowers" }) // should return ["name", "favFood"]
-    function getProps() {
-
+    function getProps(object) {
+      let array = []
+      for (let property in object) {
+        if (property !== "age" && property !== "married"){
+          array[array.length] = property
+        }
+      }
+      return array
     }
 
     // 🧪 TESTS, do not work below this line
